[package]
name = "rust-blog"
version = "0.1.0"
authors = ["edison <arlicle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.6.0"
rust_decimal = "1.0.3"
regex = "1.3.1"
serde_json = "1.0.40"
serde = "1.0.101"
serde_derive = "1.0.101"
notify = "5.0.0-pre.1"
urlencoding = "1.0.0"
crossbeam-channel = "0.3.9"
config = "0.9.3"
walkdir = "2.2.9"
chrono = "0.4"
tera = "1.0.0-beta.15"

